my-apps/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  annotations:
    lbipam.cilium.io/ips: "192.168.0.53"
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  selector:
    app: adguard-home
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
  - name: web
    port: 80
    targetPort: 80
