my-apps/adguard-home/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "adguard.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-home-web
          port: 80
